--- a/24h/src/main/resources/application.properties
+++ b/24h/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/24h2
+spring.datasource.url=jdbc:mysql://localhost:3306/24h3
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 
-hibernate.hbm2ddl.auto=update
-spring.jpa.show.sql=true
-spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
